AMPS-693 removing override in DebugMojo and MavenGoals - fix in AbstractProductHandler should take care of it separate commit if it really doesn't so it's easier to rollback